--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,10 @@
         <label for="senha" class="form-label">Senha</label>
         <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
       </div>
-      <div class="d-grid">
+      <div>
+        <a class="d-flex justify-content-end p-2" href="#">Esqueci minha senha</a>
+      </div>
+      <div class="d-grid">      
         <button type="submit" class="btn btn-secondary">Entrar</button>
       </div>
     </form>
