--- a/homepage.html
+++ b/homepage.html
@@ -4,164 +4,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Navbar Lateral Esquerda</title>
+  <title>MyOrders</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 
 <body>
-  <div class="d-flex" style="min-height: 100vh;">
-    <!-- MENU LATERAL -->
-    <div class="bg-light border-end p-3" style="width: 250px;">
-      <h5 class="text-center mb-4">Menu</h5>
-      <div class="accordion" id="accordionMenu">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-              Produtos
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse">
-            <div class="accordion-body">
-              <ul class="list-unstyled">
-                <li><a href="#" class="nav-link subitem-link" data-target="cadastro-produto">Cadastrar Produto</a></li>
-                <li><a href="#" class="nav-link subitem-link" data-target="cadastro-perguntas">Cadastrar Pergunta</a></li>
-                <li><a href="#" class="nav-link subitem-link" data-target="listar-produtos">Listar Produtos</a></li>
-              </ul>
-            </div>
-          </div>
+  <header>
+    <nav class="navbar fixed-top bg-light">
+      <div class="container-fluid">
+        <h2 onclick="mostrarPagina('home')">MyOrders</h2>
+        <div>
+          <a class="navbar-brand fs-3 mx-5" href="#" onclick="mostrarPagina('produtos')">Produtos</a>
+          <a class="navbar-brand fs-3 mx-5" href="#" onclick="mostrarPagina('cadastro')">Cadastro</a>
         </div>
       </div>
+    </nav>
+  </header>
+
+  <main class="container" style="margin-top: 80px;">
+    <div id="home">
+      <h3>Página inicial</h3>
+      <p>Bem-vindo ao MyOrders!</p>
     </div>
-
-    <!-- CONTEÚDO PRINCIPAL -->
-    <div class="flex-grow-1 p-3">
-      <!-- Cadastro de Produto -->
-      <div id="cadastro-produto" class="conteudo">
-        <h2>Cadastro de Produto</h2>
-        <form id="form-produto">
-          <input type="hidden" id="produto-id" />
-          <div class="mb-3">
-            <label class="form-label">Nome do Produto</label>
-            <input type="text" class="form-control" id="produto-nome" required />
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Preço</label>
-            <input type="number" class="form-control" id="produto-preco" required />
-          </div>
-          <button type="submit" class="btn btn-primary">Salvar</button>
-        </form>
-      </div>
-
-      <!-- Cadastro de Pergunta -->
-      <div id="cadastro-perguntas" class="conteudo" style="display: none;">
-        <h2>Cadastro de Pergunta</h2>
-        <form>
-          <div class="mb-3">
-            <label class="form-label">Pergunta</label>
-            <input type="text" class="form-control" placeholder="Digite a pergunta">
-          </div>
-          <button type="submit" class="btn btn-primary">Salvar</button>
-        </form>
-      </div>
-
-      <!-- Listar Produtos -->
-      <div id="listar-produtos" class="conteudo" style="display: none;">
-        <h2>Lista de Produtos</h2>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>Código</th>
-              <th>Nome</th>
-              <th>Valor</th>
-              <th>Ações</th>
-            </tr>
-          </thead>
-          <tbody id="tabela-produtos">
-            <!-- Produtos via JS -->
-          </tbody>
-        </table>
-      </div>
+    
+    <div id="produtos" style="display: none;">
+      <h3>Lista de Produtos</h3>
+      <table class="table table-striped">
+        <thead class="table-dark">
+          <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Preço</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Produto A</td>
+            <td>R$ 10,00</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Produto B</td>
+            <td>R$ 20,00</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Produto C</td>
+            <td>R$ 30,00</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </div>
+    
+    <div id="cadastro" style="display: none;">
+      <h3>Cadastro de Produto</h3>
+      <form>
+        <div class="mb-3">
+          <label for="produtoNome" class="form-label">Nome do Produto</label>
+          <input type="text" class="form-control" id="produtoNome" placeholder="Digite o nome">
+        </div>
+        <div class="mb-3">
+          <label for="produtoPreco" class="form-label">Preço</label>
+          <input type="number" class="form-control" id="produtoPreco" placeholder="Digite o preço">
+        </div>
+        <button type="submit" class="btn btn-primary">Salvar</button>
+      </form>
+    </div>
+  </main>
 
-  <!-- SCRIPT FINAL -->
-  <script>
-    // Simulando banco de dados com array
-    const produtos = [];
-
-    // Navegação entre abas
-    document.querySelectorAll('.subitem-link').forEach(link => {
-      link.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelectorAll('.subitem-link').forEach(l => l.classList.remove('active', 'bg-secondary', 'text-white'));
-        this.classList.add('active', 'bg-secondary', 'text-white');
-
-        document.querySelectorAll('.conteudo').forEach(sec => sec.style.display = 'none');
-        const target = this.getAttribute('data-target');
-        document.getElementById(target).style.display = 'block';
-
-        if (target === 'listar-produtos') carregarProdutos();
-      });
-    });
-
-    // Preencher a tabela
-    function carregarProdutos() {
-      const tabela = document.getElementById('tabela-produtos');
-      tabela.innerHTML = '';
-      produtos.forEach(prod => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${prod.id}</td>
-          <td>${prod.nome}</td>
-          <td>R$ ${prod.preco.toFixed(2)}</td>
-          <td><button class="btn btn-sm btn-warning btn-editar" data-id="${prod.id}">Editar</button></td>
-        `;
-        tabela.appendChild(row);
-      });
-    }
-
-    // Editar produto
-    document.addEventListener('click', function (e) {
-      if (e.target.classList.contains('btn-editar')) {
-        const id = parseInt(e.target.getAttribute('data-id'));
-        const produto = produtos.find(p => p.id === id);
-
-        document.getElementById('produto-id').value = produto.id;
-        document.getElementById('produto-nome').value = produto.nome;
-        document.getElementById('produto-preco').value = produto.preco;
-
-        document.querySelectorAll('.conteudo').forEach(sec => sec.style.display = 'none');
-        document.getElementById('cadastro-produto').style.display = 'block';
-      }
-    });
-
-    // Salvar (editar ou novo)
-    document.getElementById('form-produto').addEventListener('submit', function (e) {
-      e.preventDefault();
-      const id = document.getElementById('produto-id').value;
-      const nome = document.getElementById('produto-nome').value;
-      const preco = parseFloat(document.getElementById('produto-preco').value);
-
-      if (id) {
-        const produto = produtos.find(p => p.id == id);
-        produto.nome = nome;
-        produto.preco = preco;
-      } else {
-        const novo = {
-          id: produtos.length + 1,
-          nome,
-          preco
-        };
-        produtos.push(novo);
-      }
-
-      alert("Produto salvo!");
-      document.querySelectorAll('.conteudo').forEach(sec => sec.style.display = 'none');
-      document.getElementById('listar-produtos').style.display = 'block';
-      carregarProdutos();
-    });
-  </script>
+  <script src="javascript/script.js"></script>
 </body>
-
 </html>
