--- a/cardapio.html
+++ b/cardapio.html
@@ -163,11 +163,11 @@
     </style>
 </head>
 <body>
- 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary-custom fixed-top navbar-custom">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary-custom fixed-top navbar-custom align-">
         <div class="container">
             <a class="navbar-brand fw-bold" href="#">
-                <i class="fas fa-store me-2"></i>MyOrders
+                <h3>MyOrders</h3>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -195,17 +195,15 @@
             </div>
         </div>
     </nav>
- 
+
     <div class="container my-4">
- 
         <div id="menu-page" class="page-section active">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">Nosso Cardápio</h2>
                 <p class="text-muted">Selecione os produtos desejados</p>
             </div>
- 
+
             <div class="row">
- 
                 <div class="col-lg-6 mb-4">
                     <div class="card card-category">
                         <div class="card-header card-header-custom">
@@ -213,7 +211,7 @@
                         </div>
                         <div class="card-body">
                             <div class="product-item">
-                                <div class="product-info">
+                                <div class="product-info ">
                                     <h6 class="mb-1 fw-bold">Água 2.50</h6>
                                     <p class="mb-0 text-muted small">Cód: 118 | Cod.Aux: 7898849988441</p>
                                 </div>
@@ -315,7 +313,8 @@
                     </div>
                 </div>
             </div>
- 
+        </div>
+
         <div id="cart-page" class="page-section">
             <div class="text-center mb-4">
                 <h2 class="fw-bold">Meu Pedido</h2>
@@ -345,7 +344,7 @@
                 </button>
             </div>
         </div>
- 
+
         <div id="orders-page" class="page-section">
             <div class="text-center mb-4">
                 <h2 class="fw-bold">Meus Pedidos</h2>
@@ -360,7 +359,7 @@
                     </div>
                     <span class="status-badge status-completed">Concluído</span>
                 </div>
-                <div class="card-body">
+                <div class="card-body mx-3 p-3">
                     <div class="cart-item">
                         <span>Água 2.50</span>
                         <span>R$ 2,50</span>
@@ -388,7 +387,7 @@
                     </div>
                     <span class="status-badge status-completed">Concluído</span>
                 </div>
-                <div class="card-body">
+                <div class="card-body mx-3 p-3">
                     <div class="cart-item">
                         <span>VINHO DRAFT</span>
                         <span>R$ 12,90</span>
@@ -411,14 +410,14 @@
             </div>
         </div>
     </div>
- 
-    <footer class="footer mt-5">
+
+    <footer class="footer mt-5 fixed-bottom">
         <div class="container text-center">
             <p class="mb-1">MyOrders | CNPJ: 58.328.554/0001-17</p>
             <p class="mb-0">Nota de chamada: Projetador</p>
         </div>
     </footer>
- 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Sistema de navegação
